Added progressBar, disabled ask-button during request and removed chat divider and selector animation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,4 +10,5 @@
     android:paddingVertical="32dp"
     android:scrollbars="vertical"
     android:keepScreenOn="true"
-    android:divider="@null"/>
+    android:divider="@null"
+    android:listSelector="@android:color/transparent" />
