--- a/app/src/main/res/layout/layout_btn_ask.xml
+++ b/app/src/main/res/layout/layout_btn_ask.xml
@@ -13,7 +13,7 @@
         android:text="@string/chatgpt_no_internet"
         android:textSize="11sp"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_red_dark"
+        android:textColor="#cc0000"
         android:visibility="gone" />
 
     <ProgressBar
