--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -11,14 +11,14 @@
         android:layout_marginStart="64dp"
         android:layout_marginEnd="64dp"
         android:background="@drawable/chatgpt_logo"
-        app:layout_constraintBottom_toTopOf="@+id/lblVersion"
+        app:layout_constraintBottom_toTopOf="@+id/version_tv"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/lblVersion"
+        android:id="@+id/version_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
