--- a/app/src/main/res/layout/activity_saved_chats.xml
+++ b/app/src/main/res/layout/activity_saved_chats.xml
@@ -12,8 +12,10 @@
 
     <TextView
         android:id="@+id/no_saved_chats"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/chatgpt_no_saved_chats"
         android:textAlignment="center"
         android:textSize="16sp"
