chat icons appear now in the first line on the left instead of above the item

--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -6,21 +6,12 @@
     android:paddingVertical="10dp"
     android:paddingHorizontal="16dp">
 
-    <ImageView
-        android:id="@+id/chat_item_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/chatgpt_logo" />
-
     <TextView
         android:id="@+id/chat_item_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/chat_item_icon"
-        android:layout_marginHorizontal="8dp"
-        android:layout_marginTop="8dp"/>
+        android:layout_alignParentTop="true"
+        android:layout_marginHorizontal="8dp"/>
 
     <TextView
         android:id="@+id/chat_item_cost"
