added reset button for saved chats to reset the chat to the first message

--- a/app/src/main/res/layout/layout_chat_footer.xml
+++ b/app/src/main/res/layout/layout_chat_footer.xml
@@ -45,5 +45,6 @@
         android:background="@null"
         android:scaleType="fitCenter"
         android:layout_marginHorizontal="24dp"
-        android:onClick="save" />
+        android:onClick="saveReset"
+        android:visibility="gone"/>
 </LinearLayout>
