settings theme changes

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,8 +11,22 @@
         <item name="colorOnSecondary">@color/chatgpt_black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
 
+        <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/chatgpt_black</item>
+        <item name="dialogTheme">@style/AlertDialogStyle</item>
+        <item name="alertDialogTheme">@style/AlertDialogStyle</item>
+        <item name="alertDialogStyle">@style/AlertDialogStyle</item>
+    </style>
+
+    <style name="AlertDialogStyle" parent="AlertDialog.AppCompat">
+        <item name="colorPrimary">@color/chatgpt_green</item>
+        <item name="colorPrimaryDark">@color/chatgpt_black</item>
+        <item name="colorAccent">@color/chatgpt_green</item>
+        <item name="android:textColor">@color/chatgpt_white</item>
+        <item name="android:background">@color/chatgpt_black</item>
+        <item name="android:popupBackground">@color/chatgpt_black</item>
+        <item name="android:windowBackground">@color/chatgpt_black</item>
+        <item name="android:itemBackground">@color/chatgpt_black</item>
     </style>
 </resources>
