--- a/app/src/main/res/layout/activity_edit_chat.xml
+++ b/app/src/main/res/layout/activity_edit_chat.xml
@@ -12,42 +12,74 @@
         android:paddingHorizontal="32dp"
         android:textAlignment="center"
         android:textColor="#74AA9C"
+        android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/edit_btn"
+        app:layout_constraintBottom_toTopOf="@+id/modified_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
-        android:id="@+id/edit_btn"
-        android:layout_width="0dp"
-        android:layout_height="@android:dimen/notification_large_icon_height"
-        android:layout_marginStart="24dp"
+    <TextView
+        android:id="@+id/modified_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/twotone_edit_24"
-        android:background="@null"
-        android:onClick="editTitle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/delete_btn"
+        android:textAlignment="center"
+        android:textColor="#74AA9C"
+        app:layout_constraintBottom_toTopOf="@+id/edit_btn"
+        app:layout_constraintEnd_toStartOf="@+id/chat_cost_tv"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_title_tv" />
 
     <ImageButton
+        android:id="@+id/edit_btn"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@null"
+        android:onClick="editTitle"
+        android:scaleType="fitCenter"
+        android:src="@drawable/twotone_edit_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/delete_btn"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/modified_tv" />
+
+    <ImageButton
         android:id="@+id/delete_btn"
         android:layout_width="0dp"
-        android:layout_height="@android:dimen/notification_large_icon_height"
+        android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="24dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/twotone_delete_24"
+        android:layout_marginBottom="8dp"
         android:background="@null"
         android:onClick="deleteChat"
+        android:scaleType="fitCenter"
+        android:src="@drawable/twotone_delete_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/edit_btn"
+        app:layout_constraintTop_toBottomOf="@id/chat_cost_tv" />
+
+    <TextView
+        android:id="@+id/chat_cost_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:textAlignment="center"
+        android:textColor="#74AA9C"
+        app:layout_constraintBottom_toTopOf="@+id/delete_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/modified_tv"
         app:layout_constraintTop_toBottomOf="@+id/edit_title_tv" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
