--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="chatgpt_green">#74aa9c</color>
-    <color name="chatgpt_white">#ffffff</color>
-    <color name="chatgpt_black">#000000</color>
-    <color name="chatgpt_grey">#A8A8A8</color>
+    <color name="wristassist_green">#74aa9c</color>
+    <color name="wristassist_white">#ffffff</color>
+    <color name="wristassist_black">#000000</color>
+    <color name="wristassist_grey">#A8A8A8</color>
 </resources>
