--- a/app/src/main/res/xml/fragment_preferences.xml
+++ b/app/src/main/res/xml/fragment_preferences.xml
@@ -5,51 +5,51 @@
     android:id="@+id/fragment_preferences">
 
     <EditTextPreference
-        app:key="net.devemperor.chatgpt.api_key"
-        app:title="@string/chatgpt_change_api_key"
-        app:summary="@string/chatgpt_no_api_key"
-        app:positiveButtonText="@string/chatgpt_okay"
-        app:negativeButtonText="@string/chatgpt_cancel"
+        app:key="net.devemperor.wristassist.api_key"
+        app:title="@string/wristassist_change_api_key"
+        app:summary="@string/wristassist_no_api_key"
+        app:positiveButtonText="@string/wristassist_okay"
+        app:negativeButtonText="@string/wristassist_cancel"
         app:dialogTitle=" "/>
 
     <ListPreference
-        app:key="net.devemperor.chatgpt.api_host"
-        app:title="@string/chatgpt_select_api_host"
-        app:summary="@string/chatgpt_select_api_host_message"
+        app:key="net.devemperor.wristassist.api_host"
+        app:title="@string/wristassist_select_api_host"
+        app:summary="@string/wristassist_select_api_host_message"
         app:entries="@array/api_hosts"
         app:entryValues="@array/api_hosts_values"
-        app:negativeButtonText="@string/chatgpt_cancel"
+        app:negativeButtonText="@string/wristassist_cancel"
         app:dialogTitle=" "
         android:defaultValue="https://api.openai.com/"/>
 
     <ListPreference
-        app:key="net.devemperor.chatgpt.model"
-        app:title="@string/chatgpt_select_model"
-        app:summary="@string/chatgpt_select_model_message"
+        app:key="net.devemperor.wristassist.model"
+        app:title="@string/wristassist_select_model"
+        app:summary="@string/wristassist_select_model_message"
         app:entries="@array/models"
         app:entryValues="@array/models_values"
-        app:negativeButtonText="@string/chatgpt_cancel"
+        app:negativeButtonText="@string/wristassist_cancel"
         app:dialogTitle=" "
         android:defaultValue="gpt-3.5-turbo"/>
 
     <SeekBarPreference
-        app:key="net.devemperor.chatgpt.font_size"
-        app:title="@string/chatgpt_font_size"
+        app:key="net.devemperor.wristassist.font_size"
+        app:title="@string/wristassist_font_size"
         app:showSeekBarValue="true"
         app:min="11"
         app:defaultValue="15"
         android:max="18"/>
 
     <SwitchPreference
-        app:key="net.devemperor.chatgpt.vibrate"
-        app:title="@string/chatgpt_vibrate"
-        app:summary="@string/chatgpt_vibrate_message"
+        app:key="net.devemperor.wristassist.vibrate"
+        app:title="@string/wristassist_vibrate"
+        app:summary="@string/wristassist_vibrate_message"
         android:defaultValue="true"/>
 
     <SwitchPreference
-        app:key="net.devemperor.chatgpt.show_cost"
-        app:title="@string/chatgpt_show_cost"
-        app:summary="@string/chatgpt_show_cost_message"
+        app:key="net.devemperor.wristassist.show_cost"
+        app:title="@string/wristassist_show_cost"
+        app:summary="@string/wristassist_show_cost_message"
         android:defaultValue="false"/>
 
 </PreferenceScreen>
