--- a/app/src/main/res/layout/item_saved_chat.xml
+++ b/app/src/main/res/layout/item_saved_chat.xml
@@ -9,7 +9,7 @@
         android:id="@+id/saved_chat_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#74aa9c"
+        android:textColor="#9C27B0"
         android:textSize="18sp"
         android:maxLines="3"
         android:paddingStart="8dp"
