darker purple in app theme

--- a/app/src/main/res/drawable/twotone_chat_24.xml
+++ b/app/src/main/res/drawable/twotone_chat_24.xml
@@ -1,5 +1,5 @@
 <vector android:autoMirrored="true" android:height="24dp"
-    android:tint="#9C27B0" android:viewportHeight="24"
+    android:tint="#7B1FA2" android:viewportHeight="24"
     android:viewportWidth="24" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillAlpha="0.3"
         android:fillColor="@android:color/white"
