--- a/app/src/main/res/drawable/twotone_info_24.xml
+++ b/app/src/main/res/drawable/twotone_info_24.xml
@@ -1,4 +1,4 @@
-<vector android:height="24dp" android:tint="#9C27B0"
+<vector android:height="24dp" android:tint="#7B1FA2"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillAlpha="0.3"
