darker purple in app theme 2

--- a/app/src/main/res/layout/activity_edit_chat.xml
+++ b/app/src/main/res/layout/activity_edit_chat.xml
@@ -11,7 +11,7 @@
         android:maxLines="3"
         android:paddingHorizontal="32dp"
         android:textAlignment="center"
-        android:textColor="#9C27B0"
+        android:textColor="#7B1FA2"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/modified_tv"
@@ -27,7 +27,7 @@
         android:layout_marginStart="16dp"
         android:paddingStart="16dp"
         android:textAlignment="center"
-        android:textColor="#9C27B0"
+        android:textColor="#7B1FA2"
         app:layout_constraintBottom_toTopOf="@+id/edit_btn"
         app:layout_constraintEnd_toStartOf="@+id/chat_cost_tv"
         app:layout_constraintHorizontal_bias="0.5"
@@ -75,7 +75,7 @@
         android:layout_marginEnd="16dp"
         android:paddingEnd="16dp"
         android:textAlignment="center"
-        android:textColor="#9C27B0"
+        android:textColor="#7B1FA2"
         app:layout_constraintBottom_toTopOf="@+id/delete_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
