--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -13,10 +13,12 @@
     <string-array name="models">
         <item name="gpt-3.5-turbo">GPT-3.5 Turbo</item>
         <item name="gpt-3.5-turbo-16k">GPT-3.5 Turbo 16K</item>
+        <item name="gpt-4">GPT-4</item>
     </string-array>
 
     <string-array name="models_values">
         <item name="gpt-3.5-turbo">gpt-3.5-turbo</item>
         <item name="gpt-3.5-turbo-16k">gpt-3.5-turbo-16k</item>
+        <item name="gpt-4">gpt-4</item>
     </string-array>
 </resources>
