--- a/app/src/main/res/layout/activity_edit_chat.xml
+++ b/app/src/main/res/layout/activity_edit_chat.xml
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
         android:paddingStart="16dp"
         android:textAlignment="center"
         android:textColor="#7B1FA2"
@@ -72,6 +73,7 @@
         android:id="@+id/chat_cost_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:paddingEnd="16dp"
         android:textAlignment="center"
