--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,6 +21,7 @@
 
     <style name="Theme.App.Starting" parent="Theme.SplashScreen.IconBackground">
         <item name="windowSplashScreenBackground">@color/wristassist_black</item>
+        <item name="windowSplashScreenIconBackgroundColor">@color/wristassist_purple</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/wristassist_splash</item>
         <item name="postSplashScreenTheme">@style/Theme.WristAssist</item>
     </style>
