splash icon & font adaption for onboarding

--- a/app/src/main/res/layout/viewpager_info.xml
+++ b/app/src/main/res/layout/viewpager_info.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/info_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
