--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
+        android:paddingHorizontal="24dp"
         android:text="@string/wristassist_about"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -40,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
+        android:paddingHorizontal="24dp"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/version_tv"
         app:layout_constraintEnd_toEndOf="parent"
