Bugfix: pawan.krd works again

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,23 +4,30 @@
         <item name="openai">openai.com</item>
         <item name="pawan">pawan.krd</item>
     </string-array>
-
     <string-array name="api_hosts_values">
         <item name="openai">https://api.openai.com/</item>
         <item name="pawan">https://api.pawan.krd/</item>
     </string-array>
 
-    <string-array name="models">
+    <string-array name="models_openai">
         <item name="gpt-3.5-turbo">GPT-3.5 Turbo</item>
         <item name="gpt-3.5-turbo-16k">GPT-3.5 Turbo 16K</item>
         <item name="gpt-4">GPT-4</item>
         <item name="gpt-4-32k">GPT-4 32K</item>
     </string-array>
-
-    <string-array name="models_values">
+    <string-array name="models_openai_values">
         <item name="gpt-3.5-turbo">gpt-3.5-turbo</item>
         <item name="gpt-3.5-turbo-16k">gpt-3.5-turbo-16k</item>
         <item name="gpt-4">gpt-4</item>
         <item name="gpt-4-32k">gpt-4-32k</item>
+    </string-array>
+
+    <string-array name="models_pawan">
+        <item name="pai-001-light-beta">PAI-001 Beta Light</item>
+        <item name="pai-001-beta">PAI-001 Beta</item>
+    </string-array>
+    <string-array name="models_pawan_values">
+        <item name="pai-001-light-beta">pai-001-light-beta</item>
+        <item name="pai-001-beta">pai-001-beta</item>
     </string-array>
 </resources>
