--- a/app/src/main/res/xml/fragment_preferences.xml
+++ b/app/src/main/res/xml/fragment_preferences.xml
@@ -17,24 +17,19 @@
             app:dialogTitle=" "/>
 
         <ListPreference
-            app:key="net.devemperor.wristassist.model"
-            app:title="@string/wristassist_select_model"
-            app:summary="@string/wristassist_select_model_message"
-            app:entries="@array/models"
-            app:entryValues="@array/models_values"
-            app:negativeButtonText="@string/wristassist_cancel"
-            app:dialogTitle=" "
-            android:defaultValue="gpt-3.5-turbo"/>
-
-        <ListPreference
             app:key="net.devemperor.wristassist.api_host"
             app:title="@string/wristassist_select_api_host"
-            app:summary="@string/wristassist_select_api_host_message"
             app:entries="@array/api_hosts"
             app:entryValues="@array/api_hosts_values"
             app:negativeButtonText="@string/wristassist_cancel"
             app:dialogTitle=" "
             android:defaultValue="https://api.openai.com/"/>
+
+        <ListPreference
+            app:key="net.devemperor.wristassist.model"
+            app:title="@string/wristassist_select_model"
+            app:negativeButtonText="@string/wristassist_cancel"
+            app:dialogTitle=" "/>
 
     </PreferenceCategory>
 
