--- a/app/src/main/res/layout/item_saved_chat.xml
+++ b/app/src/main/res/layout/item_saved_chat.xml
@@ -9,9 +9,8 @@
         android:id="@+id/saved_chat_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#7B1FA2"
-        android:textSize="20sp"
         android:maxLines="3"
         android:paddingHorizontal="16dp"
-        android:paddingTop="12dp" />
+        android:paddingTop="12dp"
+        android:textSize="20sp" />
 </LinearLayout>
