--- a/app/src/main/res/layout/layout_chat_header.xml
+++ b/app/src/main/res/layout/layout_chat_header.xml
@@ -13,5 +13,6 @@
         android:textAlignment="center"
         android:textColor="#7B1FA2"
         android:textStyle="bold"
+        android:textSize="15sp"
         android:visibility="gone"/>
 </LinearLayout>
