auto voice input in deeper conversations

--- a/app/src/main/res/xml/fragment_preferences.xml
+++ b/app/src/main/res/xml/fragment_preferences.xml
@@ -17,7 +17,7 @@
             android:max="18"/>
 
         <SwitchPreference
-            app:key="net.devemperor.wristassist.hands-free"
+            app:key="net.devemperor.wristassist.hands_free"
             app:title="@string/wristassist_hands_free"
             app:summary="@string/wristassist_hands_free_message"
             android:defaultValue="false"/>
